# Microcontrollers-and-FPGA

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
Arduino_Projects/Flame gas detection system in a room/: Sistem de detecție a gazelor flăcărilorîntr-oîncăpere.docx  code.ino
Arduino_Projects/UTILITY-WEATHER-ROVER/: Robot agricol.docx  arm_control.ino  docum_ro.txt  info_en  motors.ino  sensor_code.ino
Embedded_C_Projects/Lab4_Zynq_GPIO/: vitis-comp.json
Embedded_C_Projects/Lab4_Zynq_GPIO/src/: CMakeLists.txt  helloworld.c
Embedded_C_Projects/git/GPIO_PS_ZYNQ_2/: GPIO_PS_ZYNQ_2.xpr  design_1_wrapper.xsa
Embedded_C_Projects/git/Zybo_CSA/: Zybo_CSA.xpr  design_1_wrapper.xsa
Embedded_C_Projects/git/lab6/: design_1_wrapper.xsa  lab6.xpr
Embedded_C_Projects/git/lab_10_tema/: lab_10_tema.xpr
Embedded_C_Projects/git/memorie_cache/: memorie_cache.xpr
Embedded_C_Projects/hlw1/src/: compile_commands.json
Embedded_C_VHDL_Projects/git/GPIO_PS_ZYNQ_2/: GPIO_PS_ZYNQ_2.xpr  vivado.jou
Embedded_C_VHDL_Projects/git/Zybo_CSA/: Zybo_CSA.xpr
Embedded_C_VHDL_Projects/git/div/: design_1_wrapper.xsa  lab_10_tema.xpr
FPGA_Projects/VERILOG/: README.md
FPGA_Projects/VHDL/: int_adder_subtractor.vhd  range_adjuster.vhd  sliding_window_adder.vhd  testbench.vhd
Moveit_Arm_f/: cod
Raspberry_pi_project/distance_sensor_robot/: Obstacle Avoidance Robot.docx  cod_robot.py
devel/: local_setup.zsh  setup.bash  setup.sh
devel/lib/: libgeometric_shapes.so.0.7.7  libmoveit_lerp_planner_plugin.so.0.1.0
logs/moveit_tutorials/: build.make.030.log.stderr
proj_arm/: documentatie proiect.docx
proj_arm/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  setup.zsh
proj_arm/src/: .rosinstall  .rosinstall.bak  CMakeLists.txt  control_kinematic_robot.cpp
proj_arm/src/image_3d_processor/: CMakeLists.txt
proj_arm/src/image_3d_processor/src/: image_3d_processor_node.cpp
proj_arm/src/rviz_demo/: CMakeLists.txt
proj_arm/src/rviz_demo/src/: rviz_demo.cpp
proj_arm/src/virtual_camera_cpp/: CMakeLists.txt
proj_arm/src/virtual_camera_cpp/src/: virtual_camera.cpp
src/: .rosinstall.bak  control_kinematic_robot.cpp
src/image_3d_processor/: CMakeLists.txt
src/panda_simulation/: package.xml
src/rviz_demo/: CMakeLists.txt
src/ssc/: package.xml
(+6369 files in other folders)
